Updated about page with original author

--- a/index.html
+++ b/index.html
@@ -267,6 +267,10 @@
 
       <h1>FAQ</h1>
 
+	  <h3>Author</h3> 
+	  <p>
+	  The creator and main branch of the project can be found here <a href="https://github.com/onuraslan">Original DotaBuff CP</a>.
+	  </p>
       <h3>What is this?</h3>
       <p>This is a counter picker for Dota 2. It shows the advantage percentages
          against a hero or team. Advantage percentages are collected from
